--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_MAIN_DB=1
+
+SMS_ALIYUN_ACCESS_ID=
+SMS_ALIYUN_ACCESS=
+SMS_ALIYUN_SIGN_NAME=
+SMS_ALIYUN_TEMPLATE_CODE=
+
+SMS_TENCENT_ACCESS_ID=
+SMS_TENCENT_ACCESS=
+SMS_TENCENT_SIGN_NAME=
+SMS_TENCENT_TEMPLATE_CODE=
