--- a/.env.example
+++ b/.env.example
@@ -19,14 +19,19 @@ LOG_LEVEL=debug
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=
-REDIS_MAIN_DB=1
+REDIS_MAIN_DB=
+
+SMS_Platform=
 
 SMS_ALIYUN_ACCESS_ID=
 SMS_ALIYUN_ACCESS=
 SMS_ALIYUN_SIGN_NAME=
 SMS_ALIYUN_TEMPLATE_CODE=
 
-SMS_TENCENT_ACCESS_ID=
-SMS_TENCENT_ACCESS=
+SMS_TENCENT_Secret_Id=
+SMS_TENCENT_Secret_Key=
+SMS_TENCENT_App_Id=
+SMS_TENCENT_Sign_Name=
+SMS_TENCENT_Template_Id=
 SMS_TENCENT_SIGN_NAME=
 SMS_TENCENT_TEMPLATE_CODE=
