验证码库（修改腾讯与阿里云封装兼容多手机号发送并确认发送结果）

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,6 @@ SMS_TENCENT_Sign_Name=
 SMS_TENCENT_Template_Id=
 SMS_TENCENT_SIGN_NAME=
 SMS_TENCENT_TEMPLATE_CODE=
+
+VERIFY_CODE_LENGTH=4
+VERIFY_CODE_EXPIRE=15
